# Synthetic_data_generation

./: .gitignore  LICENSE  README.md  data_exploration.ipynb  metadata.json  pyproject.toml  requirements.txt  sdv_synthesize_a_table_(ctgan).py  sdv_synthesize_a_table_(gaussian_copula).py
experiments/: run_all.sh  run_non_param_only.sh  run_npgc_only.sh
script/: CTGAN.py  CopulaGAN.py  Gauss_corr.py  Plot_reports.py  TVAE.py  gaussian_copula.py  non_parametric_gaussian.py  npgc_script.py
src/: __init__.py  correlator.py  image_plotter.py  loader.py  metrics.py  non_parametric.py  wandb_utils.py
