[project]
name = "synthetic-data-generation"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Diaz"}
]
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "ucimlrepo (>=0.0.7,<0.0.8)",
    "sdv (>=1.27.0,<2.0.0)",
    "kaleido (>=1.1.0,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "wandb (>=0.22.1,<0.23.0)",
    "mostlyai-qa (>=1.9.9,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "xgboost (>=3.1.1,<4.0.0)",
    "zuko (>=1.5.0,<2.0.0)",
]

[tool.poetry]
package-mode = false

[virtualenvs]
in-project = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
